--- a/index.html
+++ b/index.html
@@ -38,5 +38,33 @@
       .then(() => console.log("Service Worker Registered"));
   }
 </script>
+<script>
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  // Prevent Chrome from showing default prompt
+  e.preventDefault();
+  deferredPrompt = e;
+
+  // Show a custom button
+  const installBtn = document.createElement('button');
+  installBtn.textContent = 'Install Mastermind App';
+  installBtn.style.position = 'fixed';
+  installBtn.style.bottom = '20px';
+  installBtn.style.right = '20px';
+  installBtn.style.padding = '12px 20px';
+  installBtn.style.fontSize = '16px';
+  installBtn.style.zIndex = 1000;
+  document.body.appendChild(installBtn);
+
+  installBtn.addEventListener('click', async () => {
+    installBtn.remove(); // hide button
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    console.log('PWA install outcome:', outcome);
+    deferredPrompt = null;
+  });
+});
+</script>
 </body>
 </html>
