doing quick touch ups

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   >
 
   <button id="guessBtn">Make Guess</button>
+  <button id="playAgain">Play Again</button>
+
 
   <div class="container" id="container"></div>
 </div>
