made fixes to the app

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   >
 
   <button id="guessBtn">Make Guess</button>
-  <button id="playAgain">Play Again</button>
 
 
   <div class="container" id="container"></div>
@@ -30,7 +29,7 @@
   <div class="overlay-box">
     <h1 id="resultText"></h1>
     <p id="secretText"></p>
-    <button onclick="location.reload()">Play Again</button>
+    <button id="overlayPlayAgain">Play Again</button>
   </div>
 </div>
 <script src="script.js"></script>
